fix: hide scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,3 +28,11 @@
 
     --color-discord: #7289da;
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+html {
+  scrollbar-width: none;
+}
